# gitlab-timelogs

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: dependabot-auto-merge.yml  qa.yml  rust.yml
nix/: build.nix
src/: cfg.rs  cli.rs  fetch.rs  filtering.rs  gitlab-query.graphql  gitlab_api.rs  main.rs  views.rs
