[package]
name = "gitlab-timelogs"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std", "serde"] }
clap-serde-derive = "0.2.1"
nu-ansi-term = "0.50.0"
reqwest = { version =  "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.14"
xdg = "2.5.2"

[dependencies.clap]
version = "~4.5.4"
features = [
    "color",
    "derive",
    "env",
    "error-context",
    "help",
    "std",
    "suggestions",
    "unicode",
    "usage",
    "wrap_help",
]
