[package]
name = "gitlab-timelogs"
description = """
CLI utility to assist you with your time logs in GitLab.

gitlab-timelogs is not associated with the official GitLab project!
"""
version = "0.4.1"
edition = "2021"
keywords = ["gitlab", "productivity"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/gitlab-timelogs"
repository = "https://github.com/phip1611/gitlab-timelogs"
documentation = "https://docs.rs/gitlab-timelogs"
authors = [
  "Philipp Schuster <phip1611@gmail.com>"
]

[dependencies]
anyhow = "1.0.94"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std", "serde"] }
nu-ansi-term = "0.50.0"
reqwest = { version =  "0.12.4", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.14"

[dependencies.clap]
version = "~4.5.4"
features = [
    "color",
    "derive",
    "env",
    "error-context",
    "help",
    "std",
    "suggestions",
    "unicode",
    "usage",
    "wrap_help",
]
