[package]
name = "gitlab-timelogs"
description = """
A lightweight CLI to fetch, summarize, and validate your GitLab issue
time logs. Group entries by week, filter by date ranges, and spot anomalies
like weekend work or >10h days. Read-only, fast, and cross-platform - built
to make time tracking in GitLab finally usable.

Made by developers for developers. gitlab-timelogs is not associated
with the official GitLab project!
"""
version = "0.6.0"
edition = "2024"
rust-version = "1.85.0"
keywords = ["gitlab", "productivity"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/gitlab-timelogs"
repository = "https://github.com/phip1611/gitlab-timelogs"
documentation = "https://docs.rs/gitlab-timelogs"
authors = [
  "Philipp Schuster <phip1611@gmail.com>"
]
exclude = [
  "./flake.lock",
  "./flake.nix",
  "./nix/",
]

[profile.release]
opt-level = "s"
lto = true
strip = true

[dependencies]
anyhow = "~1.0"
chrono = { version = "~0.4", default-features = false, features = ["clock", "std", "serde"] }
nu-ansi-term = "~0.50"
reqwest = { version =  "~0.13", features = ["blocking", "json"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
toml = "~0.9"

[dependencies.clap]
version = "~4.5"
features = [
    "color",
    "derive",
    "env",
    "error-context",
    "help",
    "std",
    "suggestions",
    "unicode",
    "usage",
    "wrap_help",
]
